--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Download subtitles from YouTube as plain text."
 authors = ["Evgeny Pogrebnyak <e.pogrebnyak@gmail.com>"]
 license = "MIT"
 readme = "README.md"
+repository = "https://github.com/epogrebnyak/justsubs"
 
 [tool.poetry.dependencies]
 python = "^3.10"
